# LitAtlas

./: .gitignore  LICENSE  README.md  app-icon2.key  package-lock.json  package.json
.github/workflows/: main.yml
src/: app_settings.js  cache.js  constant.js  graph.js  index.html  paper-page.js  projects.js  similarity.js  similarity_server.py  similarity_settings.js  styles.css  tag-autocomplete.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_redesign.sql  004_sqlite.sql
src-tauri/src/: Commands copy.rs  Commands.rs  Db.rs  commands.rs  db.rs  lib.rs  logger.rs  main.rs  similarity_server.py
